2007-08-27  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/__init__.py (GObjectMeta._install_properties): 
	Refactor a bit to make sure that it is possible to use in subclasses,
	fixes #470718 (Marco Giusti)

2007-08-27   Marco Giusti  <marco.giusti@gmail.com>

	reviewed by: Gustavo J. A. M. Carneiro

	* gobject/propertyhelper.py:
	* tests/test_properties.py:
	Bug 470230 – check for default value in boolean type is wrong.

2007-08-27  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/Makefile.am,
	* gobject/Makefile.am: Remove -D_XOPEN_SOURCE=600
	-D__EXTENSIONS__, no longer needed.

	* configure.ac: Don't add -std=c9x CFLAG on Solaris.  Fixes
	#339924 again.

	* gobject/pygtype.c (pyg_type_wrapper_repr): Typecast self->type
	to (unsigned long int) to fix a compilation warning.

2007-08-14   Ed Catmur   <ed@catmur.co.uk>

	reviewed by: Gustavo J. A. M. Carneiro

	* gobject/pygobject.c (pygobject_new_full, pygobject_clear),
	(pygobject_get_dict): Bug 466082 – pygobject_new_full not fully
	initialising PyGObject, chaos results.

2007-08-13  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_subtype.py (TestSubType.testGetDict): Add unit test
	exercising a bug when GObject.__dict__ is accessed directly.

2007-07-08  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pygobject_functions)
	(pyg_timeout_add_seconds): Wrap g_timeout_add_seconds,
	conditionally compiled if glib version >= 2.13.5.

2007-07-08   Johannes Hölzl   <johannes.hoelzl@gmx.de>

	reviewed by: Gustavo Carneiro

	* gobject/gobjectmodule.c (build_gerror, init_gobject): Work
	around the deprecation warning of BaseException.message in Python
	2.6+ affecting GError exceptions.  Fixes #342948.

2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.ac: Post-release version bump.

=== 2.13.2 ===
2007-07-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

2007-07-07  Damien Carbery   <damien.carbery@sun.com>

	reviewed by: Gustavo Carneiro.
