@@ -1,5 +1,8 @@
 2007-08-27  Johan Dahlin  <jdahlin@async.com.br>
 
+	* gobject/propertyhelper.py (property.__metaclass__.__repr__): Avoid
+	exporting the metaclass, just define it in the class.
+
 	* gobject/__init__.py (GObjectMeta._install_properties): 
 	Refactor a bit to make sure that it is possible to use in subclasses,
 	fixes #470718 (Marco Giusti)
